test/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-2
  labels:
    name: nginx-2
  namespace: default
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
  - name: nginx-80
    port: 80
    protocol: TCP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx
  namespace: default
spec:
  backend:
    serviceName: nginx-2
    servicePort: 80
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: nginx-2
          servicePort: 80
